--- a/providers/github/gh-ProviderConfig.yaml
+++ b/providers/github/gh-ProviderConfig.yaml
@@ -7,5 +7,5 @@ spec:
     source: Secret
     secretRef:
       name: provider-secret
-      namespace: upbound-system
+      namespace: crossplane-system
       key: credentials
