--- a/providers/github/gh-application.yaml
+++ b/providers/github/gh-application.yaml
@@ -1,14 +1,20 @@
-project: default
-source:
-  repoURL: >-
-    https://github.com/dgeorgievski/crossplane-examples.git
-  path: providers/github
-  targetRevision: HEAD
-destination:
-  server: 'https://kubernetes.default.svc'
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: crossplane-examples
   namespace: argocd
-syncPolicy:
-  automated:
-    selfHeal: true
-  syncOptions:
-    - CreateNamespace=true
+spec:
+  project: refspec
+  source:
+    repoURL: >-
+      https://github.com/dgeorgievski/crossplane-examples.git
+    path: providers/github/manifests/
+    targetRevision: HEAD
+  destination:
+    server: 'https://kubernetes.default.svc'
+    namespace: default
+  syncPolicy:
+    automated:
+      selfHeal: true
+    syncOptions:
+      - CreateNamespace=true
